--- a/src/components/home/globals.css
+++ b/src/components/home/globals.css
@@ -190,13 +190,14 @@ body {
 
 .sub-container {
     width: 80%;
-    height: 500px!important;
+    height: 500px!;
+    min-height: 500px;
     backdrop-filter: blur(15px) saturate(200%);
     -webkit-backdrop-filter: blur(15px) saturate(200%);
     background-color: #cacacac5;
     border-radius: 12px;
     border: 1px solid rgba(209, 213, 219, 0.3);
-    padding: 2rem;
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -206,7 +207,8 @@ body {
 .sub-right {
     width: 50%;
     height: 100%;
-    padding: 20px;
+    margin: 20px;
+    /* padding: 20px; */
 }
 
 .bg-1 {
@@ -281,7 +283,7 @@ body {
 
 iframe{
     border-radius: 10px;
-    height: 100%;
+    height: 100%!;
     width: 100%;
 }
 
