--- a/src/app/(app)/gallery/globals.css
+++ b/src/app/(app)/gallery/globals.css
@@ -30,7 +30,7 @@ body {
 }
 .header {
   @apply flex justify-center items-center h-full mb-3;
-  font-size: 3rem;
+  font-size: 5rem;
 }
 *:focus {
   outline: none;
@@ -45,6 +45,7 @@ body {
 .button {
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
+  background-color:#383535;
 }
 .button:hover {
   background-color: #212529
