--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -1,6 +1,6 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities; 
+@tailwind utilities;
 
 :root {
   --max-width: 1100px;
@@ -13,30 +13,24 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --primary-glow: conic-gradient(from 180deg at 50% 50%,
+      #16abff33 0deg,
+      #0885ff33 55deg,
+      #54d6ff33 120deg,
+      #0071ff33 160deg,
+      transparent 360deg);
+  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
+      rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --tile-border: conic-gradient(#00000080,
+      #00000040,
+      #00000030,
+      #00000020,
+      #00000010,
+      #00000010,
+      #00000080);
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -51,24 +45,20 @@
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+    --secondary-glow: linear-gradient(to bottom right,
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0.3));
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+    --tile-border: conic-gradient(#ffffff80,
+        #ffffff40,
+        #ffffff30,
+        #ffffff20,
+        #ffffff10,
+        #ffffff10,
+        #ffffff80);
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
@@ -91,48 +81,65 @@ body {
 
 ::-webkit-scrollbar {
   width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 5px;
-  background: none;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 5px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  display: none;
 }
 
 @media screen and (max-width: 768px) {
   .container {
-      height: auto;
-      min-height: 100vh;
+    height: auto;
+    min-height: 100vh;
   }
+
   .sub-container {
-      display: flex;
-      padding: 0.75rem;
-      flex-direction: column;
+    display: flex;
+    padding: 0.75rem;
+    flex-direction: column;
   }
+
   .sub-left,
   .sub-right {
-      padding: 10px;
-      width: 100%;
-      height: 45%;
-      padding: 2%;
+    padding: 10px;
+    width: 100%;
+    height: 45%;
+    padding: 2%;
   }
+
   .text {
-      font-family: "ubuntu";
-      font-size: 0.75rem;
-      color: #000;
-      text-align: center;
-      margin-bottom: 2rem;
+    font-family: "ubuntu";
+    font-size: 18px;
+    color: #000;
+    text-align: center;
+    margin-bottom: 2rem;
   }
+
+  .contact-us {
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.title {
+  font-weight: bold;
+  word-spacing: 2px;
+}
+
+.contact-name {
+  font-size: large;
+}
+
+.phone {
+  font-size: medium;
+}
+
+.social-icons {
+  margin-inline: 10px
+}
+
+.social-icons:hover{
+  color: #F5A524;
+}
+
+.contact-us {
+  margin-bottom: 15px;
 }
