--- a/src/components/timeline/global.css
+++ b/src/components/timeline/global.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Grandstander:ital,wght@0,100..900;1,100..900&family=Kalam:wght@300;400;700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Orbitron:wght@400..900&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Quicksand:wght@300..700&family=Titan+One&display=swap');
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 *,
 *::before,
@@ -17,7 +18,6 @@
 body {
     font: normal 16px/1.5 "Titillium Web", sans-serif;
     overflow-x: hidden;
-    /* height: 100vh; */
     padding-bottom: 100px;
     background: #1c1e1e;
     background:
@@ -36,14 +36,6 @@ body {
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.25em;
 }
-
-/* .heading {
-    color: white;
-    font-family: "Samkaran";
-    text-align: center;
-    padding: 4rem;
-    font-size: max(3vw, 60px);
-} */
 
 .flex {
     display: flex;
@@ -70,55 +62,6 @@ body {
     padding: 4rem;
     font-size: max(5vw, 50px);
 }
-
-
-/* @media only screen and (max-width: 900px) and (min-width:600px) {
-    .upcoming-event-container .items {
-        width: 500px;
-        height: 1000px;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        margin-bottom: 20px;
-    }
-
-    .upcoming-event-container .card {
-        height: 450px;
-        width: 90%;
-        padding: 10px;
-    }
-} */
-/* 
-@media only screen and (max-width: 600px) {
-
-    .upcoming-event-container .items {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        height: 830px;
-        margin-bottom: 20px;
-    }
-
-    .upcoming-event-container .items h2 {
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-    
-    .upcoming-event-container .items p {
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-
-    .upcoming-event-container .card {
-        max-height: 370px;
-        max-width: 400px;
-        padding: 10px;
-    }
-
-} */
 
 
 /* Upcoming events card */
@@ -475,18 +418,14 @@ body {
     font-size: larger;
     font-weight: bolder;
     color: #243b55;
-    /* background: #c32c2c; */
 }
 .content > p{
     padding: 2px;
     font-size:max(1vw,15px) ;
-    /* font-size: 15px; */
-    /* background: #a5c32c; */
     
 }
 .content > a{
     width: 100%;
-    /* background: #a5c32c; */
 
 }
 
@@ -586,7 +525,7 @@ body {
 .modal {
     height: 60vh;
     width: 80vw;
-    position: sticky;
+    position: absolute;
     z-index: 6;
     top: 20%;
     left: 10%;
@@ -648,7 +587,7 @@ body {
 .btn-close {
     transform: translate(0px, 3px);
     padding: 0.6rem 1rem;
-    background: #eee;
+    color: #eee;
     border-radius: 50%;
     z-index: 5;
 }
@@ -659,8 +598,8 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(3px);
     z-index: 5;
