--- a/src/components/customNavbar/globals.css
+++ b/src/components/customNavbar/globals.css
@@ -11,3 +11,14 @@ header{
     text-decoration-line: underline;
     text-underline-offset: 10px;
 }
+
+#mobile-menu{
+ 
+    background: rgba( 0, 0, 0, 0.75 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 9.5px );
+-webkit-backdrop-filter: blur( 9.5px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+
+}
