--- a/src/components/customNavbar/globals.css
+++ b/src/components/customNavbar/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 header{
-    background : linear-gradient(0, #01010100 0%, #000a24 90%);
+    background : linear-gradient(0, #01010100 0%, #000510 90%);
      
 }
 
