--- a/src/components/Footer/globals.css
+++ b/src/components/Footer/globals.css
@@ -10,5 +10,12 @@ body{
 footer{
     align-items: start;
     background : linear-gradient(180deg, #01091d4a 0%, #000616 99%);
+    /* background: conic-gradient(at 62.5% 12.5%, #00ddff 25%, #0000 0) calc(32px / -8) calc(32px / 2),
+    conic-gradient(at 62.5% 12.5%, #00ddff 25%, #0000 0) calc(-3 * 32px / 8) calc(32px / 4),
+    conic-gradient(at 87.5% 62.5%, #00ddff 25%, #0000 0) calc(3 * 32px / 8) calc(32px / 4), conic-gradient(at 87.5% 62.5%, #00ddff 25%, #0000 0) calc(32px / -8) 0,
+    conic-gradient(at 25% 12.5%, #00ddff 25%, #0000 0) 0 calc(32px / -4), conic-gradient(at 25% 12.5%, #00ddff 25%, #0000 0) calc(32px / -4) 0,
+    conic-gradient(at 87.5% 87.5%, #00ddff 25%, #0000 0) calc(32px / 8) 0 #000000; */
+    /* background-size: 32px 32px; */
+
     margin-top: 5rem;
 }
